<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_black"
    tools:context=".ui.adminUi.VistaAdminDashboard">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDashboardHeader"
        android:padding="8dp"/>

    <Button
        android:id="@+id/buttonCompras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/purchases"
        app:layout_constraintEnd_toStartOf="@+id/buttonUsuariosDashboard"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textDashboardHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carts_list"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/buttonCompras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonUsuariosDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/users"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCompras"
        app:layout_constraintEnd_toStartOf="@+id/buttonVideogames"
        app:layout_constraintStart_toEndOf="@+id/buttonCompras"
        app:layout_constraintTop_toTopOf="@+id/buttonCompras" />

    <Button
        android:id="@+id/buttonVideogames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videogames"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUsuariosDashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUsuariosDashboard"
        app:layout_constraintTop_toTopOf="@+id/buttonUsuariosDashboard" />

    <Button
        android:id="@+id/buttonCrearUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textDashboardHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonCrearVideogame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_videogames"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textDashboardHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>